k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: posts-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: ahmed012s/backend-i:v2

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
