k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: posts-app

spec:
  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
