k8s/mongo-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mongo-service
  namespace: posts-app

spec:
  clusterIP: None

  selector:
    app: mongo

  ports:
    - port: 27017
      targetPort: 27017
